--- a/pages/19534.html
+++ b/pages/19534.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Walter Tholen in nLab
+      Horacio Porta in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Walter Tholen
+      Horacio Porta
   </h1>
 
 
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8755/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -308,14 +308,14 @@ margin-left: 0em;
 
 <div id="revision">
     <ul>
-<li><a href='http://www.math.yorku.ca/~tholen/'>website</a></li>
+<li><a href='https://faculty.math.illinois.edu/~horacio/'>webpage</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_1adcc47e7a9f9e785562d4807c9333dc20c51ae5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_15b141cc2397cb9accf52e61e1c85c6e48edc887_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/duality'>duality</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/topological+algebra'>topological algebra</a></p>
 </li>
 
 <li>
@@ -324,30 +324,26 @@ margin-left: 0em;
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
-
-<p>
- 
-</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on July 22, 2018 at 16:00:04.
-  See the <a href="https://ncatlab.org/nlab/history/Walter Tholen" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on July 22, 2018 at 16:07:33.
+  See the <a href="https://ncatlab.org/nlab/history/Horacio Porta" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Walter+Tholen" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Walter+Tholen/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Walter+Tholen" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Walter+Tholen" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Walter Tholen/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Horacio+Porta" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Horacio Porta/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Walter+Tholen" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Horacio+Porta" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Walter+Tholen" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Horacio+Porta" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Walter+Tholen" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Horacio+Porta" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
