--- a/pages/1742.html
+++ b/pages/1742.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1531905161" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1531905163" type="text/javascript"></script>
+<script src="/javascripts/application.js?1531905163" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1531905162" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1531905162" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -655,15 +655,15 @@ margin-left: 0em;
 
 <ol>
 <li>
-<p><math class='maruku-mathml' display='inline' id='mathml_3f751a91d695edd92767cc764cc0da342032e761_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mo>,</mo><mi>D</mi></mrow><annotation encoding='application/x-tex'>C, D</annotation></semantics></math> be two <a class='existingWikiWord' href='/nlab/show/category'>categories</a>, or, generally, two <a class='existingWikiWord' href='/nlab/show/object'>objects</a> of a give <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a>;</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_2e07799a29c7d6dfb5ff289218624d4f4107daca_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mo>,</mo><mi>D</mi></mrow><annotation encoding='application/x-tex'>C, D</annotation></semantics></math> be two <a class='existingWikiWord' href='/nlab/show/category'>categories</a>, or, generally, two <a class='existingWikiWord' href='/nlab/show/object'>objects</a> of a given <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a>;</p>
 </li>
 
 <li>
-<p><math class='maruku-mathml' display='inline' id='mathml_3f751a91d695edd92767cc764cc0da342032e761_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mo>:</mo><mi>C</mi><mo>→</mo><mi>D</mi></mrow><annotation encoding='application/x-tex'>L: C \to D</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_3f751a91d695edd92767cc764cc0da342032e761_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mo>:</mo><mi>D</mi><mo>→</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'>R : D \to C</annotation></semantics></math> two <a class='existingWikiWord' href='/nlab/show/functor'>functors</a> between these, or generally <a class='existingWikiWord' href='/nlab/show/1-morphism'>1-morphisms</a> in the ambient <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a>;</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_2e07799a29c7d6dfb5ff289218624d4f4107daca_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mo>:</mo><mi>C</mi><mo>→</mo><mi>D</mi></mrow><annotation encoding='application/x-tex'>L: C \to D</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_2e07799a29c7d6dfb5ff289218624d4f4107daca_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mo>:</mo><mi>D</mi><mo>→</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'>R : D \to C</annotation></semantics></math> two <a class='existingWikiWord' href='/nlab/show/functor'>functors</a> between these, or generally <a class='existingWikiWord' href='/nlab/show/1-morphism'>1-morphisms</a> in the ambient <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a>;</p>
 </li>
 
 <li>
-<p><math class='maruku-mathml' display='inline' id='mathml_3f751a91d695edd92767cc764cc0da342032e761_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>η</mi><mo>:</mo><msub><mi>id</mi> <mi>C</mi></msub><mo>⇒</mo><mi>R</mi><mo>∘</mo><mi>L</mi></mrow><annotation encoding='application/x-tex'>\eta: id_C \Rightarrow R \circ L</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_3f751a91d695edd92767cc764cc0da342032e761_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϵ</mi><mo>:</mo><mi>L</mi><mo>∘</mo><mi>R</mi><mo>⇒</mo><msub><mi>id</mi> <mi>D</mi></msub></mrow><annotation encoding='application/x-tex'>\epsilon: L \circ R \Rightarrow id_D</annotation></semantics></math> two <a class='existingWikiWord' href='/nlab/show/natural+transformation'>natural transformations</a> or, generally <a class='existingWikiWord' href='/nlab/show/2-morphism'>2-morphisms</a>.</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_2e07799a29c7d6dfb5ff289218624d4f4107daca_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>η</mi><mo>:</mo><msub><mi>id</mi> <mi>C</mi></msub><mo>⇒</mo><mi>R</mi><mo>∘</mo><mi>L</mi></mrow><annotation encoding='application/x-tex'>\eta: id_C \Rightarrow R \circ L</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_2e07799a29c7d6dfb5ff289218624d4f4107daca_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϵ</mi><mo>:</mo><mi>L</mi><mo>∘</mo><mi>R</mi><mo>⇒</mo><msub><mi>id</mi> <mi>D</mi></msub></mrow><annotation encoding='application/x-tex'>\epsilon: L \circ R \Rightarrow id_D</annotation></semantics></math> two <a class='existingWikiWord' href='/nlab/show/natural+transformation'>natural transformations</a> or, generally <a class='existingWikiWord' href='/nlab/show/2-morphism'>2-morphisms</a>.</p>
 </li>
 </ol>
 
@@ -683,18 +683,18 @@ margin-left: 0em;
 </li>
 </ol>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_3f751a91d695edd92767cc764cc0da342032e761_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_2e07799a29c7d6dfb5ff289218624d4f4107daca_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
 
 <h3 id='AsEquations'>As equations</h3>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_3f751a91d695edd92767cc764cc0da342032e761_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mover><mo>→</mo><mrow><mi>L</mi><mi>η</mi></mrow></mover><mi>L</mi><mi>R</mi><mi>L</mi><mover><mo>→</mo><mrow><mi>ϵ</mi><mi>L</mi></mrow></mover><mi>L</mi></mrow><annotation encoding='application/x-tex'> L \stackrel{L\eta}\to L R L\stackrel{\epsilon L}\to L </annotation></semantics></math></div>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_2e07799a29c7d6dfb5ff289218624d4f4107daca_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mover><mo>→</mo><mrow><mi>L</mi><mi>η</mi></mrow></mover><mi>L</mi><mi>R</mi><mi>L</mi><mover><mo>→</mo><mrow><mi>ϵ</mi><mi>L</mi></mrow></mover><mi>L</mi></mrow><annotation encoding='application/x-tex'> L \stackrel{L\eta}\to L R L\stackrel{\epsilon L}\to L </annotation></semantics></math></div>
 <p>and</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_3f751a91d695edd92767cc764cc0da342032e761_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mover><mo>→</mo><mrow><mi>η</mi><mi>R</mi></mrow></mover><mi>R</mi><mi>L</mi><mi>R</mi><mover><mo>→</mo><mrow><mi>R</mi><mi>ϵ</mi></mrow></mover><mi>R</mi></mrow><annotation encoding='application/x-tex'> R\stackrel{\eta R}\to R L R \stackrel{R\epsilon}\to R </annotation></semantics></math></div>
-<p>are identities. (Here, the composition of the <math class='maruku-mathml' display='inline' id='mathml_3f751a91d695edd92767cc764cc0da342032e761_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn></mrow><annotation encoding='application/x-tex'>1</annotation></semantics></math>- with the <math class='maruku-mathml' display='inline' id='mathml_3f751a91d695edd92767cc764cc0da342032e761_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>-morphisms is sometimes called <a class='existingWikiWord' href='/nlab/show/whiskering'>whiskering</a>.)</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_2e07799a29c7d6dfb5ff289218624d4f4107daca_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mover><mo>→</mo><mrow><mi>η</mi><mi>R</mi></mrow></mover><mi>R</mi><mi>L</mi><mi>R</mi><mover><mo>→</mo><mrow><mi>R</mi><mi>ϵ</mi></mrow></mover><mi>R</mi></mrow><annotation encoding='application/x-tex'> R\stackrel{\eta R}\to R L R \stackrel{R\epsilon}\to R </annotation></semantics></math></div>
+<p>are identities. (Here, the composition of the <math class='maruku-mathml' display='inline' id='mathml_2e07799a29c7d6dfb5ff289218624d4f4107daca_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn></mrow><annotation encoding='application/x-tex'>1</annotation></semantics></math>- with the <math class='maruku-mathml' display='inline' id='mathml_2e07799a29c7d6dfb5ff289218624d4f4107daca_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>-morphisms is sometimes called <a class='existingWikiWord' href='/nlab/show/whiskering'>whiskering</a>.)</p>
 
 <h3 id='AsDiagrams'>As diagrams</h3>
 
 <p>As <a class='existingWikiWord' href='/nlab/show/diagram'>diagrams</a> in the ambient <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a>, the triangle identities look as follows</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_3f751a91d695edd92767cc764cc0da342032e761_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mi>ϵ</mi><mi>L</mi><mo>.</mo><mi>L</mi><mi>η</mi></mtd> <mtd><mo>=</mo></mtd> <mtd><msub><mi>id</mi> <mi>L</mi></msub></mtd></mtr> <mtr><mtd><mrow><mtable columnspacing='0' rowspacing='0'><mtr><mtd></mtd> <mtd></mtd> <mtd><msub><mn>1</mn> <mi>C</mi></msub></mtd> <mtd></mtd></mtr> <mtr><mtd columnspan='5'><semantics><annotation-xml encoding='SVG1.1'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_2e07799a29c7d6dfb5ff289218624d4f4107daca_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mi>ϵ</mi><mi>L</mi><mo>.</mo><mi>L</mi><mi>η</mi></mtd> <mtd><mo>=</mo></mtd> <mtd><msub><mi>id</mi> <mi>L</mi></msub></mtd></mtr> <mtr><mtd><mrow><mtable columnspacing='0' rowspacing='0'><mtr><mtd></mtd> <mtd></mtd> <mtd><msub><mn>1</mn> <mi>C</mi></msub></mtd> <mtd></mtd></mtr> <mtr><mtd columnspan='5'><semantics><annotation-xml encoding='SVG1.1'>
        <svg height='2em' viewBox='0 0 85 20' width='8.5em' xmlns='http://www.w3.org/2000/svg'>
           <defs>
             <marker id='svg195arrowhead' markerHeight='5' markerUnits='strokeWidth' markerWidth='8' orient='auto' refX='0' refY='5' viewBox='0 0 10 10'>
@@ -867,14 +867,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on June 26, 2018 at 13:39:38.
+  Last revised on July 23, 2018 at 10:28:20.
   See the <a href="https://ncatlab.org/nlab/history/triangle identities" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/triangle+identities" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/triangle+identities/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/triangle+identities" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/triangle+identities" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/triangle+identities" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/triangle+identities/22" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(22 revisions)</span> | <a href="/nlab/show/diff/triangle+identities" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/triangle+identities" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/triangle identities/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
